# adventofcode

./: Cargo.toml  day7.dot
aoc/: Cargo.toml
aoc/src/: main.rs
aoc/src/y2020/: day01.rs  day02.rs  day03.rs  day06.rs  day07.rs  day09.rs
aoc/src/y2021/: day01.rs  day02.rs  day03.rs  day04.rs
aoc/src/y2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs
src/: day2.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
